[workspace]
default-members = ["references"]
members = [
  "references",
  "references/fields",
  "references/types",
  "references/notes",
  "tools",
  "tools/indexer",
  "tools/validator",
  "tools/generator",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = [
  "Yassine <yassineeus@example.com>",
]
edition = "2021"
rust-version = "1.72"
homepage = "https://github.com/yassineeus/tree-sitter-reference"
repository = "https://github.com/yassineeus/tree-sitter-reference"
license = "AGPL-3.0"
keywords = ["mathematics", "references", "research", "tree-structure"]
categories = ["science", "documentation"]

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allowed lints for the math references codebase
missing_docs = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"

[profile.optimize]
inherits = "release"
strip = true         # Automatically strip symbols from the binary.
lto = true           # Link-time optimization.
opt-level = 3        # Optimization level 3.
codegen-units = 1    # Maximum size reduction optimizations.

[profile.release-dev]
inherits = "release"
lto = false
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = [
  "derive",
  "env",
  "help",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
thiserror = "1.0.49"
toml = "0.8.2"
regex = "1.9.5"
walkdir = "2.4.0"
pulldown-cmark = "0.9.3"
textwrap = "0.16.0"
comrak = "0.19.0"
chrono = "0.4.31"
slug = "0.1.4"
colored = "2.0.4"
indexmap = "2.0.2"
glob = "0.3.1"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }

# Internal references
math-references-indexer = { version = "1.0.0", path = "./tools/indexer" }
math-references-validator = { version = "1.0.0", path = "./tools/validator" }
math-references-generator = { version = "1.0.0", path = "./tools/generator" }
